2001-01-21 12:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* webmail.el (webmail-type-definition): netaddress changes.

2001-01-21 00:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus.el: Fix copyright. Remove trailing spaces.

	* message.el (message-forward): Use mule4.
	
2001-01-20 09:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-util.el (mm-string-as-unibyte): New.

	* message.el (message-forward): Use it.

2001-01-19 23:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-cite-original-without-signature): Don't peel
	off the blank line.
	(message-get-reply-headers): Add Cc if it is not in follow-to.

2001-01-20  Simon Josefsson  <sj@extundo.com>

	* mm-decode.el (mm-handle-multipart-from): Add.
	(mm-dissect-buffer): Save From: header value.
	(mm-security-from): Remove.
	(mm-possibly-verify-or-decrypt): Don't set mm-security-from.

	* mml-smime.el (mml-smime-verify): Use `mm-handle-multipart-from'
	instead of `mml-security-from'.  Protect null from value.

2001-01-20  Simon Josefsson  <sj@extundo.com>

	* mailcap.el (mailcap-mime-data): Run `gnumeric' on
	application/vnd.ms-excel attachments.

2001-01-19  Simon Josefsson  <sj@extundo.com>

        * gnus-art.el (gnus-button-alist): Add `?=' to mailto URL regexp.

2001-01-19 13:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-ignored-mail-headers): Ditto.

2001-01-19  Simon Josefsson  <sj@extundo.com>

	* message.el (message-ignored-news-headers): Only search beginning
	of line.

2001-01-19  Alberto Lusiani <a.lusiani@noemail.org>

	* message.el (message-send-mail): Content-Type may not be there.

2001-01-18 23:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-ems.el (gnus-article-display-xface): Add BUFFER.
	* gnus-xmas.el (gnus-xmas-article-display-xface): Ditto.

	* gnus-art.el (article-display-x-face): Insert X-Face if there is
	not.

2001-01-18 19:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-summary-read-group-1): Don't test dead