@@ -7547,8 +7547,7 @@ If the optional first argument FILENAME is nil, send the image to the
 printer.  If FILENAME is a string, save the PostScript image in a file with
 that name.  If FILENAME is a number, prompt the user for the name of the file
 to save in."
-  (interactive (list (ps-print-preprint current-prefix-arg)
-		     current-prefix-arg))
+  (interactive (list (ps-print-preprint current-prefix-arg)))
   (dolist (article (gnus-summary-work-articles n))
     (gnus-summary-select-article nil nil 'pseudo article)
     (gnus-eval-in-buffer-window gnus-article-buffer
@@ -7571,8 +7570,9 @@ to save in."
 			      (mail-header-date gnus-current-headers) ")"))))
 		(gnus-run-hooks 'gnus-ps-print-hook)
 		(save-excursion
-		  (ps-print-buffer-with-faces filename))))
-	  (kill-buffer buffer))))))
+		  (ps-spool-buffer-with-faces))))
+	  (kill-buffer buffer)))))
+  (ps-despool filename))
 
 (defun gnus-summary-show-article (&optional arg)
   "Force re-fetching of the current article.
